# figx

./: .gitignore  .tarpaulin.toml  CHANGELOG.md  Cargo.toml  Changes.md  Dockerfile  README.md  redeploy.sh
.github/workflows/: coverage.yml  deploy-docs.yml  docker-image.yml  pull-request.yml  release.yml
app/: Cargo.toml
app/src/: cli.rs  error.rs  logging.rs  main.rs
app/wix/: main.wxs
crates/command/aquery/: Cargo.toml
crates/command/aquery/src/: error.rs  lib.rs
crates/command/auth/: Cargo.toml
crates/command/auth/res/: index.html
crates/command/auth/src/: error.rs  lib.rs
crates/command/clean/: Cargo.toml
crates/command/clean/src/: error.rs  lib.rs
crates/command/explain/: Cargo.toml
crates/command/explain/src/: error.rs  lib.rs
crates/command/fetch/: Cargo.toml
crates/command/fetch/src/: lib.rs
crates/command/import/: Cargo.toml
crates/command/import/src/: error.rs  lib.rs
crates/command/info/: Cargo.toml
crates/command/info/src/: lib.rs
crates/command/query/: Cargo.toml
crates/command/query/src/: error.rs  lib.rs
crates/command/scan/: Cargo.toml
crates/command/scan/src/: error.rs  lib.rs
crates/lib/auth/: Cargo.toml
crates/lib/auth/src/: error.rs  lib.rs
crates/lib/cache/: Cargo.toml
crates/lib/cache/src/: error.rs  key.rs  lib.rs
crates/lib/dashboard/: Cargo.toml
crates/lib/dashboard/src/: lib.rs  logger.rs  progress.rs
crates/lib/figma/: Cargo.toml
crates/lib/figma-fluent/: Cargo.toml
crates/lib/figma-fluent/src/: data.rs  error.rs  lib.rs  node_stream.rs
crates/lib/figma/src/: data.rs  lib.rs
crates/lib/graph_exec/: Cargo.toml
crates/lib/graph_exec/src/: action.rs  configured.rs  lib.rs  unconfigured.rs  util.rs
crates/lib/image_vector/: Cargo.toml
crates/lib/image_vector/src/: lib.rs  model.rs  usvg.rs
crates/lib/label/: Cargo.toml
crates/lib/label/src/: label.rs  lib.rs  matching.rs  name.rs  package.rs  pathellipsis.rs
crates/lib/metrics/: Cargo.toml
crates/lib/metrics/src/: lib.rs  metrics.rs  prom.rs
crates/lib/pretty/: Cargo.toml
crates/lib/pretty/src/: lib.rs
crates/lib/progress_bar/: Cargo.toml
crates/lib/progress_bar/src/: lib.rs
crates/lib/rainbow_bar/: Cargo.toml
crates/lib/rainbow_bar/src/: lib.rs
crates/lib/svg2compose/: Cargo.toml
crates/lib/svg2compose/src/: color_mapping.rs  image_vector.rs  lib.rs  svg2vec.rs  vec2compose.rs
crates/lib/svg2compose/src/codegen/: iv_builder.rs
crates/lib/svg2compose/src/kotlin/: code_block.rs  file_spec.rs  mod.rs  property_spec.rs  util.rs
crates/lib/svg2drawable/: Cargo.toml
crates/lib/svg2drawable/src/: lib.rs
crates/lib/webp/: Cargo.toml
crates/lib/webp/src/: boxed.rs  encode.rs  image.rs  lib.rs
crates/phase/evaluation/: Cargo.toml  README.md
crates/phase/evaluation/src/: builder.rs  error.rs  hashing.rs  import.rs  lib.rs  targets.rs
crates/phase/evaluation/src/actions/: convert_png_to_webp.rs  convert_svg_to_compose.rs  convert_svg_to_vector_drawable.rs  convert_to_webp.rs  download_image.rs  download_img.rs  export_image.rs  export_img.rs  fetch_remote.rs  find_node.rs  find_node_by_name.rs  get_kotlin_package.rs  get_node.rs  get_remote_image.rs  import_android_drawable.rs  import_android_webp.rs  import_compose.rs  import_pdf.rs  import_png.rs  import_svg.rs  import_webp.rs  materialize.rs  materialize_img.rs  mod.rs  no_op.rs  render_svg_to_png.rs  scale_png.rs  svg_to_compose.rs  util_variants.rs
crates/phase/evaluation/src/figma/: batching.rs  indexing.rs  mod.rs  models.rs  repository.rs
crates/phase/loading/: Cargo.toml  README.md
crates/phase/loading/src/: api.rs  error.rs  lib.rs  util.rs
crates/phase/loading/src/parser/: access_token_definition.rs  android_drawable_profile_dto.rs  android_webp_profile_dto.rs  compose_profile_dto.rs  export_scale.rs  mod.rs  node_id_list_dto.rs  pdf_profile_dto.rs  png_profile_dto.rs  profiles_dto.rs  remotes_dto.rs  resources_dto.rs  single_name_pattern.rs  svg_profile_dto.rs  util.rs  variants_dto.rs  webp_profile_dto.rs  webp_quality.rs  workspace_dto.rs
crates/phase/loading/src/workspace/: mappers.rs  mod.rs  parser.rs  profiles.rs  remotes.rs
crates/phase/loading/src/workspace/fig/: de.rs  mod.rs  parser.rs  resources.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/reference/: 1-profiles.md  1.1-png-profile.md  1.2-svg-profile.md  1.3-pdf-profile.md  1.4-webp-profile.md  1.5-compose-profile.md  1.6-android-webp-profile.md  1.7-android-drawable-profile.md  2-remotes.md
docs/src/user_guide/: 1-installation.md  2-getting-started.md  2.1-concepts.md  2.1.1-workspaces-packages-resources.md  2.1.2-remotes.md  2.1.3-profiles.md  2.1.4-fig-files.md  2.1.5-labels.md  2.2-setup.md  2.2.1-minimal-example.md  2.2.2-singlemodule-android-project.md  2.2.3-multimodule-android-project.md  3-how-to-guides.md  3.1-recipes.md  3.1.1-android-webp-1.md  3.1.2-android-webp-2.md  3.1.3-android-compose-1.md  3.1.4-android-compose-2.md  3.2-running-on-ci.md
examples/android-project/: .figtree.toml  .figxconfig.toml  README.md  local.properties  settings.gradle
examples/android-project/app/: .fig.toml  build.gradle
examples/android-project/app/src/main/: AndroidManifest.xml
examples/android-project/app/src/main/java/com/example/figxdemo/: MainActivity.kt
examples/android-project/app/src/main/java/com/example/figxdemo/ui/icons/: .fig.toml  Bulb.kt  Cookie.kt  Cupcake.kt  FirstAid.kt  Leaf.kt  Moon.kt  Planet.kt  Puzzle.kt  Rainbow.kt  Sun.kt  WaterDrop.kt
examples/android-project/app/src/main/java/com/example/figxdemo/ui/theme/: Color.kt  Icons.kt  Theme.kt  Type.kt
examples/android-project/app/src/main/res/drawable/: fav_filled.xml
examples/android-project/app/src/main/res/values/: strings.xml  themes.xml
examples/android-project/gradle/wrapper/: gradle-wrapper.properties
examples/multiple-svg-icons/: .fig.toml  .figtree.toml  README.md
