[workspace]
members = ["app"]
resolver = "2"

[workspace.package]
version = "0.4.5"
rust-version = "1.87.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
# Internal Crates
phase_loading = { path = "crates/phase/loading" }
phase_evaluation = { path = "crates/phase/evaluation" }
## User commands
command_info = { path = "crates/command/info" }
command_query = { path = "crates/command/query" }
command_explain = { path = "crates/command/explain" }
command_fetch = { path = "crates/command/fetch" }
command_import = { path = "crates/command/import" }
command_clean = { path = "crates/command/clean" }
## Common code
lib_figma = { path = "crates/lib/figma" }
lib_label = { path = "crates/lib/label" }
lib_progress_bar = { path = "crates/lib/progress_bar" }
lib_cache = { path = "crates/lib/cache" }
lib_svg2compose = { path = "crates/lib/svg2compose" }

# External Deps
toml-span = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
glob = "0.3"
log = "0.4"
derive_more = { version = "2.0", features = ["from"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
owo-colors = "4"
fast-glob = "0.4.5"
bytes = "1.10"
surrealkv = "0.9"
dashmap = "6.1"
bincode = { version = "2.0", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
ureq = { version = "3.0", default-features = false, features = [
    "rustls",
    "gzip",
    "json",
] }
ordermap = { version = "0.5.7" }
webp = { git = "https://github.com/tonykolomeytsev/webp.git" }
crossterm = "0.29"
ignore = "0.4.23"
codespan-reporting = "0.12"
unindent = "0.2.4"
# itertools = "0.14"
image = "0.25"
key-mutex = "0.1.3"
retry = "2.1.0"
num_cpus = "1.17"
tempfile = "3.19.1"