[workspace]
members = ["app"]
resolver = "2"

[workspace.package]
version = "0.7.1"
rust-version = "1.87.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
# Internal Crates
phase_loading = { path = "crates/phase/loading" }
phase_evaluation = { path = "crates/phase/evaluation" }
## User commands
command_info = { path = "crates/command/info" }
command_query = { path = "crates/command/query" }
command_explain = { path = "crates/command/explain" }
command_fetch = { path = "crates/command/fetch" }
command_import = { path = "crates/command/import" }
command_clean = { path = "crates/command/clean" }
## Common code
lib_figma_fluent = { path = "crates/lib/figma-fluent" }
lib_label = { path = "crates/lib/label" }
lib_progress_bar = { path = "crates/lib/progress_bar" }
lib_cache = { path = "crates/lib/cache" }
lib_svg2compose = { path = "crates/lib/svg2compose" }
lib_metrics = { path = "crates/lib/metrics" }
lib_dashboard = { path = "crates/lib/dashboard" }



usvg = { version = "0.45.1", default-features = false }
resvg = { version = "0.45.1", default-features = false, features = [
    "raster-images",
] }
toml-span = "0.5"
serde = { version = "1.0", features = [
    "serde_derive",
], default-features = false }
serde_json = "1.0"
glob = "0.3"
log = "0.4"
derive_more = { version = "2.0", features = ["from"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
fast-glob = "0.4.5"
bytes = { version = "1.10", default-features = false }
surrealkv = "0.9"
dashmap = "6.1"
bincode = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
ureq = { version = "3.0", default-features = false, features = [
    "rustls",
    "gzip",
    "json",
] }
ordermap = "0.5.7"
webp = { git = "https://github.com/tonykolomeytsev/webp.git" }
crossterm = { version = "0.29", default-features = false }
ignore = "0.4.23"
codespan-reporting = "0.12"
unindent = "0.2.4"
image = { version = "0.25", default-features = false, features = ["png"] }
key-mutex = "0.1.3"
retry = "2.1.0"
tempfile = { version = "3.19.1", default-features = false }
crossbeam-channel = "0.5.15"
boxcar = "0.2.13"
quantiles = "0.7.1"
supports-color = "3.0.2"
slab = "0.4.10"
terminal_size = "0.4.2"
json-event-parser = "0.2.2"
is_ci = "1.2.0"