[workspace]
members = ["app"]
resolver = "2"

[workspace.package]
version = "0.7.3"
rust-version = "1.87.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
# Internal Crates
phase_loading = { path = "crates/phase/loading" }
phase_evaluation = { path = "crates/phase/evaluation" }
## User commands
command_info = { path = "crates/command/info" }
command_query = { path = "crates/command/query" }
command_explain = { path = "crates/command/explain" }
command_fetch = { path = "crates/command/fetch" }
command_import = { path = "crates/command/import" }
command_clean = { path = "crates/command/clean" }
command_auth = { path = "crates/command/auth" }
## Common code
lib_figma_fluent = { path = "crates/lib/figma-fluent" }
lib_label = { path = "crates/lib/label" }
lib_cache = { path = "crates/lib/cache" }
lib_svg2compose = { path = "crates/lib/svg2compose" }
lib_metrics = { path = "crates/lib/metrics" }
lib_dashboard = { path = "crates/lib/dashboard" }
lib_rainbow_bar = { path = "crates/lib/rainbow_bar" }
lib_auth = { path = "crates/lib/auth" }


# SVG and Image Processing
usvg = { version = "0.45.1", default-features = false }
resvg = { version = "0.45.1", default-features = false, features = [
    "raster-images",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
webp = { git = "https://github.com/tonykolomeytsev/webp.git" }

# Serialization / Deserialization
serde = { version = "1.0", features = [
    "serde_derive",
], default-features = false }
serde_json = "1.0"
bincode = "2.0"
toml-span = "0.5"
json-event-parser = "0.2.2"

# CLI and Terminal
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", default-features = false, features = [
    "windows",
] }
terminal_size = "0.4.2"
supports-color = "3.0.2"

# Logging and Reporting
log = "0.4"
codespan-reporting = "0.12"

# Concurrency and Parallelism
rayon = "1.10"
crossbeam-channel = "0.5.15"
dashmap = "6.1"
slab = "0.4.10"
key-mutex = "0.1.3"
boxcar = "0.2.13"

# File and Path Utilities
glob = "0.3"
fast-glob = "0.4.5"
ignore = "0.4.23"
tempfile = { version = "3.19.1", default-features = false }

# Networking
ureq = { version = "3.0", default-features = false, features = [
    "rustls",
    "gzip",
    "json",
] }
tiny_http = "0.12.0"

# Data Structures and Algorithms
ordermap = "0.5.7"
quantiles = "0.7.1"

# Utilities
derive_more = { version = "2.0", features = ["from"], default-features = false }
retry = "2.1.0"
unindent = "0.2.4"
bytes = { version = "1.10", default-features = false }
is_ci = "1.2.0"
open = "5.3.2"

# Key-Value Stores / Hashing / Security
surrealkv = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
], default-features = false }
