[package]
name = "figx"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal
command_info.workspace = true
command_query.workspace = true
command_aquery.workspace = true
command_fetch.workspace = true
command_import.workspace = true
command_clean.workspace = true

phase_loading.workspace = true
phase_evaluation.workspace = true

lib_label.workspace = true
lib_svg2compose.workspace = true
lib_progress_bar.workspace = true

# External
clap.workspace = true
log.workspace = true
serde.workspace = true
derive_more.workspace = true
ureq.workspace = true
crossterm.workspace = true