[package]
name = "figx"
version.workspace = true
edition.workspace = true
authors = ["Anton Kolomeytsev <tonykolomeytsev@gmail.com>"]
repository = "https://github.com/tonykolomeytsev/figx"
description = "Pragmatic CLI tool for importing design assets from Figma into your codebase."
license = "GPL-3.0"

[dependencies]
# Internal
command_info.workspace = true
command_query.workspace = true
command_explain.workspace = true
command_fetch.workspace = true
command_import.workspace = true
command_clean.workspace = true

phase_loading.workspace = true
phase_evaluation.workspace = true

lib_label.workspace = true
lib_svg2compose.workspace = true
lib_progress_bar.workspace = true
lib_metrics.workspace = true

# External
clap.workspace = true
log.workspace = true
serde.workspace = true
derive_more.workspace = true
ureq.workspace = true
crossterm.workspace = true
codespan-reporting.workspace = true
unindent.workspace = true
toml-span.workspace = true
