[package]
name = "lib_dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
crossbeam-channel.workspace = true
crossterm.workspace = true
log.workspace = true
supports-color.workspace = true
slab.workspace = true
term_size.workspace = true
ordermap.workspace = true
is_ci = "1.2.0"