[package]
name = "phase_evaluation"
version.workspace = true
edition.workspace = true

[dependencies]
phase_loading.workspace = true
lib_figma.workspace = true
lib_label.workspace = true
lib_cache.workspace = true
lib_svg2compose.workspace = true

rayon.workspace = true
log.workspace = true
serde.workspace = true
bincode.workspace = true
dashmap.workspace = true
webp.workspace = true
image = "0.25"
xxhash-rust.workspace = true
key-mutex = "0.1.3"
retry = "2.1.0"
ureq.workspace = true


[dev-dependencies]
tempfile = "3.19.1"