[package]
name = "phase_evaluation"
version.workspace = true
edition.workspace = true

[dependencies]
phase_loading.workspace = true
lib_figma_fluent.workspace = true
lib_label.workspace = true
lib_cache.workspace = true
lib_svg2compose.workspace = true
lib_progress_bar.workspace = true
lib_metrics.workspace = true

rayon.workspace = true
log.workspace = true
serde.workspace = true
bincode.workspace = true
dashmap.workspace = true
webp.workspace = true
image.workspace = true
xxhash-rust.workspace = true
key-mutex.workspace = true
retry.workspace = true
ureq.workspace = true
crossbeam-channel.workspace = true
resvg.workspace = true
ordermap.workspace = true

[dev-dependencies]
tempfile.workspace = true
