[package]
name = "phase_loading"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal
lib_label.workspace = true

# External
toml-span.workspace = true
log.workspace = true
derive_more.workspace = true
ordermap.workspace = true
ignore.workspace = true

[dev-dependencies]
unindent.workspace = true